{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 44,
  "lineage": "12727245-3f24-0465-f90d-3a9d55298027",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045137e8d34668746",
            "arn": "arn:aws:ec2:us-east-2:920503509796:instance/i-0aa817c9ffb969a0d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa817c9ffb969a0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd56fb251feb16c5",
            "private_dns": "ip-172-31-8-10.us-east-2.compute.internal",
            "private_ip": "172.31.8.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c787c4c0a9f318b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0607888ec5dac68e9",
            "tags": {
              "Name": "elastic-computer_0"
            },
            "tags_all": {
              "Name": "elastic-computer_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044c0695ddfa19d2b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-access"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045137e8d34668746",
            "arn": "arn:aws:ec2:us-east-2:920503509796:instance/i-0d50c1c623e8a1350",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d50c1c623e8a1350",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074d94af076372db5",
            "private_dns": "ip-172-31-11-38.us-east-2.compute.internal",
            "private_ip": "172.31.11.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073efe8d82ec6a9e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0607888ec5dac68e9",
            "tags": {
              "Name": "elastic-computer_1"
            },
            "tags_all": {
              "Name": "elastic-computer_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044c0695ddfa19d2b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-access"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045137e8d34668746",
            "arn": "arn:aws:ec2:us-east-2:920503509796:instance/i-01417e476d758d53b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01417e476d758d53b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0312536da2c5ba003",
            "private_dns": "ip-172-31-8-234.us-east-2.compute.internal",
            "private_ip": "172.31.8.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032ef8bebae08593f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0607888ec5dac68e9",
            "tags": {
              "Name": "elastic-computer_2"
            },
            "tags_all": {
              "Name": "elastic-computer_2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044c0695ddfa19d2b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045137e8d34668746",
            "arn": "arn:aws:ec2:us-east-2:920503509796:instance/i-0bfaee022dddbbe26",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfaee022dddbbe26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ea73eae475619bf",
            "private_dns": "ip-172-31-39-108.us-east-2.compute.internal",
            "private_ip": "172.31.39.108",
            "public_dns": "ec2-18-222-187-130.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.187.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a1f78a74de1d26a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ed1ac872cf2e644",
            "tags": {
              "Name": "dev4"
            },
            "tags_all": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044c0695ddfa19d2b"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.ssh-access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-045137e8d34668746",
            "arn": "arn:aws:ec2:us-east-2:920503509796:instance/i-07ed7f8d7e311a7f0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ed7f8d7e311a7f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-001e1a15f2d5c09d6",
            "private_dns": "ip-172-31-43-17.us-east-2.compute.internal",
            "private_ip": "172.31.43.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7a77ba8781196be",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-access"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ed1ac872cf2e644",
            "tags": {
              "Name": "dev5"
            },
            "tags_all": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-044c0695ddfa19d2b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-access"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cce346b3952cce3",
            "arn": "arn:aws:ec2:us-east-1:920503509796:instance/i-0208c1182704ecf95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0208c1182704ecf95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-kali",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f2f59185d3224e8",
            "private_dns": "ip-172-31-89-149.ec2.internal",
            "private_ip": "172.31.89.149",
            "public_dns": "ec2-3-88-53-217.compute-1.amazonaws.com",
            "public_ip": "3.88.53.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031c9d07c07343240",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ssh-access-us-east-1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0994b7eae33399062",
            "tags": {
              "Name": "dev6"
            },
            "tags_all": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e31ecf2cd6dff1fa"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.HOMOLOG-dynamodb",
            "aws_security_group.ssh-access-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920503509796:security-group/sg-044c0695ddfa19d2b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044c0695ddfa19d2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "187.19.211.170/32",
                  "188.19.211.170/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-access",
            "name_prefix": "",
            "owner_id": "920503509796",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-access"
            },
            "tags_all": {
              "Name": "ssh-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-076d1e04650e5e508"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-access-us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920503509796:security-group/sg-0e31ecf2cd6dff1fa",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e31ecf2cd6dff1fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "187.19.211.170/32",
                  "188.19.211.170/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-access-us-east-1",
            "name_prefix": "",
            "owner_id": "920503509796",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-access-us-east-1"
            },
            "tags_all": {
              "Name": "ssh-access-us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-043d6b4f1f5a16056"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}